Start adding options for minecraft related API extensions to further support additional needs